--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>PokemonAngular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/svg" href="./logo.svg">
+  <link rel="icon" type="image/png" href="/src/logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
